<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/newCardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/newCardHeader"
        android:textSize="@dimen/header_height"
        android:layout_weight="2"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newPokemonCardName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/newPokemonCardName"
                android:textSize="@dimen/editTextHeight"/>

            <EditText
                android:id="@+id/newPokemonCardHP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/newPokemonCardHP"
                android:textSize="@dimen/editTextHeight"
                android:inputType="number"/>

            <EditText
                android:id="@+id/newPokemonCardType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/newPokemonCardType"
                android:textSize="@dimen/editTextHeight"/>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/temp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/temp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/temp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/newPokemonCardSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/newPokemonCardSubmitButton"
        android:textSize="@dimen/button_height"
        android:layout_gravity="center"
        android:layout_weight="1" />
</LinearLayout>